@@ -20,9 +20,7 @@
 package org.sonarlint.intellij.ui.tree;
 
 import com.google.common.collect.ComparisonChain;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Ordering;
-import com.intellij.openapi.editor.RangeMarker;
 import com.intellij.openapi.vfs.VirtualFile;
 import java.util.Collection;
 import java.util.Comparator;
@@ -34,7 +32,6 @@ import java.util.stream.StreamSupport;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nonnull;
 import javax.swing.tree.DefaultTreeModel;
-import javax.swing.tree.TreeNode;
 import org.sonarlint.intellij.issue.LiveIssue;
 import org.sonarlint.intellij.ui.nodes.AbstractNode;
 import org.sonarlint.intellij.ui.nodes.FileNode;
@@ -46,7 +43,7 @@ import org.sonarlint.intellij.ui.nodes.SummaryNode;
  * Should be optimize to minimize the recreation of portions of the tree.
  */
 public class IssueTreeModelBuilder {
-  private static final List<String> SEVERITY_ORDER = ImmutableList.of("BLOCKER", "CRITICAL", "MAJOR", "MINOR", "INFO");
+  private static final List<String> SEVERITY_ORDER = List.of("BLOCKER", "CRITICAL", "MAJOR", "MINOR", "INFO");
   private static final Comparator<LiveIssue> ISSUE_COMPARATOR = new IssueComparator();
 
   private final IssueTreeIndex index;
@@ -78,11 +75,11 @@ public class IssueTreeModelBuilder {
   public void updateModel(Map<VirtualFile, Collection<LiveIssue>> map, String emptyText) {
     summary.setEmptyText(emptyText);
 
-    List<VirtualFile> toRemove = index.getAllFiles().stream().filter(f -> !map.containsKey(f)).collect(Collectors.toList());
+    var toRemove = index.getAllFiles().stream().filter(f -> !map.containsKey(f)).collect(Collectors.toList());
 
     toRemove.forEach(this::removeFile);
 
-    for (Map.Entry<VirtualFile, Collection<LiveIssue>> e : map.entrySet()) {
+    for (var e : map.entrySet()) {
       setFileIssues(e.getKey(), e.getValue());
     }
 
@@ -102,14 +99,14 @@ public class IssueTreeModelBuilder {
       return;
     }
 
-    List<LiveIssue> filtered = filter(issues);
+    var filtered = filter(issues);
     if (filtered.isEmpty()) {
       removeFile(file);
       return;
     }
 
-    boolean newFile = false;
-    FileNode fNode = index.getFileNode(file);
+    var newFile = false;
+    var fNode = index.getFileNode(file);
     if (fNode == null) {
       newFile = true;
       fNode = new FileNode(file);
@@ -119,9 +116,9 @@ public class IssueTreeModelBuilder {
     setIssues(fNode, filtered);
 
     if (newFile) {
-      SummaryNode parent = getFilesParent();
-      int idx = parent.insertFileNode(fNode, new FileNodeComparator());
-      int[] newIdx = {idx};
+      var parent = getFilesParent();
+      var idx = parent.insertFileNode(fNode, new FileNodeComparator());
+      var newIdx = new int[]{idx};
       model.nodesWereInserted(parent, newIdx);
       model.nodeChanged(parent);
     } else {
@@ -130,7 +127,7 @@ public class IssueTreeModelBuilder {
   }
 
   private void removeFile(VirtualFile file) {
-    FileNode node = index.getFileNode(file);
+    var node = index.getFileNode(file);
 
     if (node != null) {
       index.remove(node.file());
@@ -142,14 +139,14 @@ public class IssueTreeModelBuilder {
     node.removeAllChildren();
 
     // 15ms for 500 issues -> to improve?
-    TreeSet<LiveIssue> set = new TreeSet<>(ISSUE_COMPARATOR);
+    var issues = new TreeSet<>(ISSUE_COMPARATOR);
 
-    for (LiveIssue issue : issuePointers) {
-      set.add(issue);
+    for (var issue : issuePointers) {
+      issues.add(issue);
     }
 
-    for (LiveIssue issue : set) {
-      IssueNode iNode = new IssueNode(issue);
+    for (var issue : issues) {
+      var iNode = new IssueNode(issue);
       node.add(iNode);
     }
   }
@@ -181,24 +178,24 @@ public class IssueTreeModelBuilder {
 
   static class IssueComparator implements Comparator<LiveIssue> {
     @Override public int compare(@Nonnull LiveIssue o1, @Nonnull LiveIssue o2) {
-      Ordering<Long> creationDateOrdering = Ordering.natural().reverse().nullsLast();
-      int dateCompare = creationDateOrdering.compare(o1.getCreationDate(), o2.getCreationDate());
+      var creationDateOrdering = Ordering.natural().reverse().nullsLast();
+      var dateCompare = creationDateOrdering.compare(o1.getCreationDate(), o2.getCreationDate());
 
       if (dateCompare != 0) {
         return dateCompare;
       }
 
-      int severityCompare = Ordering.explicit(SEVERITY_ORDER).compare(o1.getSeverity(), o2.getSeverity());
+      var severityCompare = Ordering.explicit(SEVERITY_ORDER).compare(o1.getSeverity(), o2.getSeverity());
 
       if (severityCompare != 0) {
         return severityCompare;
       }
 
-      RangeMarker r1 = o1.getRange();
-      RangeMarker r2 = o2.getRange();
+      var r1 = o1.getRange();
+      var r2 = o2.getRange();
 
-      int rangeStart1 = (r1 == null) ? -1 : r1.getStartOffset();
-      int rangeStart2 = (r2 == null) ? -1 : r2.getStartOffset();
+      var rangeStart1 = (r1 == null) ? -1 : r1.getStartOffset();
+      var rangeStart2 = (r2 == null) ? -1 : r2.getStartOffset();
 
       return ComparisonChain.start()
         .compare(rangeStart1, rangeStart2)
@@ -214,7 +211,7 @@ public class IssueTreeModelBuilder {
       return firstIssueDown(startNode);
     }
 
-    Object next = getNextNode(startNode);
+    var next = getNextNode(startNode);
 
     if (next == null) {
       // no next node in the entire tree
@@ -225,12 +222,12 @@ public class IssueTreeModelBuilder {
       return (IssueNode) next;
     }
 
-    return firstIssueDown((AbstractNode) next);
+    return firstIssueDown(next);
   }
 
   @CheckForNull
   public IssueNode getPreviousIssue(AbstractNode startNode) {
-    Object next = getPreviousNode(startNode);
+    var next = getPreviousNode(startNode);
 
     if (next == null) {
       // no next node in the entire tree
@@ -241,7 +238,7 @@ public class IssueTreeModelBuilder {
       return (IssueNode) next;
     }
 
-    return lastIssueDown((AbstractNode) next);
+    return lastIssueDown(next);
   }
 
   /**
@@ -254,7 +251,7 @@ public class IssueTreeModelBuilder {
     }
 
     if (node.getChildCount() > 0) {
-      TreeNode firstChild = node.getFirstChild();
+      var firstChild = node.getFirstChild();
       return firstIssueDown((AbstractNode) firstChild);
     }
 
@@ -270,7 +267,7 @@ public class IssueTreeModelBuilder {
       return (IssueNode) node;
     }
 
-    TreeNode lastChild = node.getLastChild();
+    var lastChild = node.getLastChild();
 
     if (lastChild == null) {
       return null;
@@ -281,12 +278,12 @@ public class IssueTreeModelBuilder {
 
   @CheckForNull
   private static AbstractNode getPreviousNode(AbstractNode startNode) {
-    AbstractNode parent = (AbstractNode) startNode.getParent();
+    var parent = (AbstractNode) startNode.getParent();
 
     if (parent == null) {
       return null;
     }
-    TreeNode previous = parent.getChildBefore(startNode);
+    var previous = parent.getChildBefore(startNode);
     if (previous == null) {
       return getPreviousNode(parent);
     }
@@ -299,12 +296,12 @@ public class IssueTreeModelBuilder {
    */
   @CheckForNull
   private static AbstractNode getNextNode(AbstractNode startNode) {
-    AbstractNode parent = (AbstractNode) startNode.getParent();
+    var parent = (AbstractNode) startNode.getParent();
 
     if (parent == null) {
       return null;
     }
-    TreeNode after = parent.getChildAfter(startNode);
+    var after = parent.getChildAfter(startNode);
     if (after == null) {
       return getNextNode(parent);
     }
